<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

    <TableRow
        android:layout_marginTop="@dimen/table_row_distance"
        android:layout_marginBottom="@dimen/table_row_distance">
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="150px"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:text="@string/things_name" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/table_row_distance"
        android:layout_marginBottom="@dimen/table_row_distance">
        <TextView
            android:id="@+id/place_tv"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="@string/things_place" />

        <EditText
            android:id="@+id/place_edit"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/table_row_distance"
        android:layout_marginBottom="@dimen/table_row_distance">
        <TextView
            android:id = "@+id/description_tv"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:text="Opis"/>
        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/table_row_distance"
        android:layout_marginBottom="@dimen/table_row_distance">
        <TextView
            android:id="@+id/date_tv"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:text="@string/things_date" />
        <Button
            android:id="@+id/date_but"
            android:background="@color/toolbarColor"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:text="@string/date_pick"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/table_row_distance"
        android:layout_marginBottom="@dimen/table_row_distance">
        <TextView
            android:id="@+id/time_tv"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:text="Czas"/>
        <Button
            android:id="@+id/time_but"
            android:background="@color/toolbarColor"
            android:textColor="@color/white"/>

    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/table_row_distance"
        android:layout_marginBottom="@dimen/table_row_distance">
        <TextView
            android:id="@+id/textView5"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:text="Przypomnieć?"/>
        <CheckBox
            android:id="@+id/reminder"
            android:layout_gravity="center"/>
    </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/table_row_distance"
            android:layout_marginBottom="@dimen/table_row_distance">
                <TextView
                android:id="@+id/textView6"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:text="Kiedy ?"/>
                <Spinner
                    android:id="@+id/remind_when"
                    android:layout_gravity="center"
                    android:gravity="center"/>

        </TableRow>
</TableLayout>
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/text_size"
        android:background="@color/saveColor"
        android:textColor="@color/white"
        android:text="@string/save_button"
        android:onClick="save_click"
        />


</RelativeLayout>
